Added navigation bar

--- a/index.html
+++ b/index.html
@@ -2,11 +2,44 @@
 <html>
 <head>
     <title>Chandana Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Skills</a>
+    <a href="#">Projects</a>
+    <a href="#">Contact</a>
+</nav>
+    <header>
+        <h1>Chandana Pallegar</h1>
+        <p>Aspiring AI & Data Enthusiast</p>
+    </header>
 
-    <h1>Hello, I am Chandana M Pallegar</h1>
-    <p>This is my first portfolio website.</p>
+    <section>
+        <h2>About Me</h2>
+        <p>I am passionate about AI, Data Analytics and building intelligent systems.</p>
+    </section>
+
+    <section>
+        <h2>Skills</h2>
+        <ul>
+            <li>Python</li>
+            <li>SQL</li>
+            <li>Git & GitHub</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Projects</h2>
+        <p>NL-to-SQL System using LLMs</p>
+    </section>
+
+    <section>
+        <h2>Contact</h2>
+        <p>Email: example@email.com</p>
+    </section>
 
 </body>
 </html>
