--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         <h2>Contact</h2>
         <p>Email: example@email.com</p>
     </section>
-
+<footer>
+    <p>© 2026 Chandana Pallegar</p>
+</footer>
 </body>
 </html>
