--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="#">Contact</a>
 </nav>
     <header>
-        <h1>Chandana Pallegar</h1>
+        <h1>Chandana Pallegar 🚀 AI Developer</h1>
         <p>Aspiring AI & Data Enthusiast</p>
     </header>
 
