Upgraded portfolio to dark AI theme design

--- a/index.html
+++ b/index.html
@@ -1,48 +1,58 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Chandana Portfolio</title>
+    <title>Chandana | AI Developer</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <nav>
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Skills</a>
-    <a href="#">Projects</a>
-    <a href="#">Contact</a>
-</nav>
+        <div class="logo">Chandana</div>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
     <header>
-        <h1><strong>Chandana Pallegar 🚀 AI Developer</strong></h1>
-        <p>Aspiring AI & Data Enthusiast</p>
+        <h1>Chandana Pallegar</h1>
+        <p>AI Developer | Data Enthusiast | Problem Solver</p>
     </header>
 
-    <section>
+    <section id="about">
         <h2>About Me</h2>
-        <p>I am passionate about AI, Data Analytics and building intelligent systems.</p>
+        <p>I am passionate about Artificial Intelligence, Data Analytics and building intelligent systems that solve real-world problems.</p>
     </section>
 
-    <section>
+    <section id="skills">
         <h2>Skills</h2>
-        <ul>
-            <li>Python</li>
-            <li>SQL</li>
-            <li>Git & GitHub</li>
-        </ul>
+        <div class="cards">
+            <div class="card">Python</div>
+            <div class="card">SQL</div>
+            <div class="card">Git & GitHub</div>
+            <div class="card">Machine Learning</div>
+        </div>
     </section>
 
-    <section>
+    <section id="projects">
         <h2>Projects</h2>
-        <p>NL-to-SQL System using LLMs</p>
+        <div class="cards">
+            <div class="card">NL-to-SQL System using LLMs</div>
+            <div class="card">Data Analysis Dashboard</div>
+        </div>
     </section>
 
-    <section>
-    <h2>Contact</h2>
-    <p>Email: chandana@email.com</p>
-    <p>LinkedIn: linkedin.com/in/chandana</p>
-</section>
-<footer>
-    <p>© 2026 Chandana Pallegar</p>
-</footer>
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: chandana@email.com</p>
+        <p>LinkedIn: linkedin.com/in/chandana</p>
+    </section>
+
+    <footer>
+        <p>© 2026 Chandana Pallegar</p>
+    </footer>
+
 </body>
 </html>
